--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-   /* navbar */
+
+  /* navbar */
  
  .navbar {
      display: grid;
@@ -77,6 +78,11 @@
      padding: 0.5rem 3rem;
  }
  
+ .dropdownItemGrids {
+     display: grid;
+     grid-template-columns: 40px auto;
+ }
+ 
  .dropdown a:hover {
      background-color: #ddd;
  }
@@ -84,6 +90,13 @@
  .show {
      display: grid;
      grid-template-areas: 'one two' 'three four' 'five six';
+ }
+ 
+ .imageGrid {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     padding-right: 1.5rem;
  }
  /* animation */
  
@@ -310,3 +323,56 @@ apps div 02 */
      margin: 1rem;
  }
  /* media query to make grid one one one after dec width */
+ 
+ @media only screen and (max-width: 1100px) {
+     /* navbar redesign*/
+     .content01 {
+         display: flex;
+         flex-direction: column-reverse;
+         justify-content: center;
+         align-items: center;
+     }
+     .content02 {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+     }
+     .img01,
+     .img02 {
+         width: 100%;
+         height: 50%;
+     }
+     .middle {
+         padding: 0px;
+         margin: 0px;
+     }
+     .animation1 {
+         font-size: 3rem;
+         padding: 0px;
+         padding-bottom: 30px;
+         width: 100%;
+     }
+     .animation2 {
+         margin: 0px;
+         font-size: 20px;
+         overflow: hidden;
+     }
+     .footer {
+         grid-template-areas: 'one two' 'three four' 'five five';
+     }
+     .footer div li {
+         padding: 5px;
+     }
+     .apps {
+         padding: 0px;
+         margin: 5%;
+     }
+ }
+ /* media query at 400 */
+ 
+ @media only screen and (max-width: 956px) {
+     .navbar2 {
+         visibility: hidden;
+     }
+ }
